--- a/index.html
+++ b/index.html
@@ -197,16 +197,17 @@
                         </p>
                     </div>
                     <div class="tdata" id="tdata2">
-                        <p class="ttext">To make a radio control electric car, to complete the given track in shortest time.</p>
+                        <p class="ttext">Program a 
+                        remote controlled electric car  to complete the given track filled with hurdles like zig zag, fidgrt spinner, bumpy bump, draw bridge, etc. in the shortest possible time. Can you do it?</p>
                     </div>
                     <div class="tdata" id="tdata3">
                         <p class="ttext">The challenge of the competition is to make a robot that can move on black lines on a white background and reach the finish as soon as possible. The participants must create an autonomous vehicle (hereafter ROBOT), that will move on the COMPETITION FIELD and do certain tasks.</p>
                     </div>
                     <div class="tdata" id="tdata4">
-                        <p class="ttext">Coming Soon</p>
+                        <p class="ttext">A unique race of brains presented to you as a triathlon which will put your geeky skills to the real test. Do you have what it takes ?</p>
                     </div>
                     <div class="tdata" id="tdata5">
-                        <p class="ttext">Coming Soon</p>
+                        <p class="ttext">The third world war will not be fought between humans but between the technologies of the superpowers of the world. Wanna experience how it feels to see artificial intelligence compete against each other, then join this AI Gaming event. Write the code for your bot and fight against other bots to see who emerges at the top and wins the war.All you need is a little bit of Python knowledge.</p>
                     </div>
                     <div class="tdata" id="tdata6">
                         <p class="ttext">A market simulation game that generates enthusiasm in economics and gives practical examples of trading goods and services.
@@ -268,7 +269,7 @@
                         </p>
                     </div>
                     <div class="cdata" id="cdata7">
-                        <p class="ctext" id="ctext1">Coming Soon
+                        <p class="ctext" id="ctext1">Ever been caught for humming inside the classroom? Ever lost yourself singing while taking a shower?<br>Here comes a platform where you can sing your heart and soul aloud.<br>We invite you to participate in the solo-duo singing competition at CultRang.
                         </p>
                     </div>
 
@@ -279,11 +280,11 @@
                         </p>
                     </div>
                     <div class="cdata" id="cdata9">
-                        <p class="ctext" id="ctext1">Coming Soon
+                        <p class="ctext" id="ctext1">For those who don't merely speak but, assert For those who don't just carry an opinion but, stamp it For those who don't just have a say but, deliver the verdict. If you have the gift of the gab, we present before you a stage and a worthy opponent.
                         </p>
                     </div>
                     <div class="cdata" id="cdata10">
-                        <p class="ctext" id="ctext1">Coming Soon
+                        <p class="ctext" id="ctext1">If creativity for you is integral to your existence. If words for you are an expression of your soul. If the pen is a gateway to your imagination. And if your hand-crafted fantasies mesmerize all and sundry, then creative writing at Cultrang is for you.
                         </p>
                     </div>
                     <div class="cdata" id="cdata11">
@@ -297,11 +298,12 @@
                         </p>
                     </div>
                     <div class="cdata" id="cdata13">
-                        <p class="ctext" id="ctext1">Coming Soon
+                        <p class="ctext" id="ctext1">“You shouldn't dream your film, you should make it!” - Steven Spielberg<br> We live in a box of space and time. Movies are windows in its walls. They allow us to enter other minds, not simply in the sense of identifying with the characters, although that is an important part of it, but by seeing the world as another person sees it.  Do you often find yourself immersed in this world? If Yes? Then participate in this competition.<br> Theme: Justice
                         </p>
                     </div>
                     <div class="cdata" id="cdata14">
-                        <p class="ctext" id="ctext1">Coming Soon
+                        <p class="ctext" id="ctext1">It is time to buckle up and exercise your minds, to give the best you can.<br>
+                          Leaving the doors to creativity open, we invite all the illustrators & graphic designers to this poster making competition.<br> Theme: Break The Stigma
                         </p>
                     </div>
 
